--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -45,10 +45,12 @@ jobs:
     runs-on: ubuntu-latest
     # Only on FINAL releases (exclude pre-releases like rc, a, b, dev)
     if: startsWith(github.ref, 'refs/tags/v') &&
-        !contains(github.ref, 'rc') &&
-        !contains(github.ref, 'a') &&
-        !contains(github.ref, 'b') &&
-        !contains(github.ref, 'dev')
+      !contains(github.ref_name, 'rc') &&
+      !contains(github.ref_name, '-')  &&
+      !contains(github.ref_name, 'a')  &&
+      !contains(github.ref_name, 'b')  &&
+      !contains(github.ref_name, 'dev')
+
     permissions:
       id-token: write   # REQUIRED for PyPI Trusted Publishing (OIDC)
       contents: read
